# multiphonon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  GetPhononDos.py  LICENSE  PKG-INFO  README  README.md  api.html  conda_environment.yml  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  usage.html  user.py  xyie2pickle.py
.github/workflows/: CI.yml  test_and_deploy.yml  unittest.yml  workflow.yml
_sources/: index.rst.txt  index.txt  usage.rst.txt
_static/: bizstyle.js
batch_example/: TestCase1.py  parameterset_common.py  params-test3.csv
conda/: meta.yaml
conda-recipe/: conda_build_config.yaml  meta.yaml  run-build.sh
conda.recipe/: channeldata.json  index.html  meta.yaml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: Get DOS GUI.ipynb  README.md  Vanadium at ARCS.ipynb  getdos-Al-from-nparrs.py  getdos-Al.py  getdos2-Al_Ei80meV-context.yaml  getdos2-V_Ei120meV-context.yaml  getdos2-V_Ei120meV-noUI.ipynb  getdos2-V_Ei120meV.ipynb  getdos2-graphite_Ei130meV-noUI.py  getdos2-graphite_multipleEi300meV,130meV-context.yaml
examples/.obsolete/: Get DOS.ipynb
examples/.to-add-data/: Dev-notes.md
examples/data/: Al-iqe-E.npy  Al-iqe-E2.npy  Al-iqe-I.npy  Al-iqe-Q.npy  Al-iqe.h5  graphite-Ei_130-iqe.h5  graphite-Ei_300-dos.h5
examples/obsolete/: Get DOS GUI - v0.ipynb  GetDOS_GUI.ipynb
multiphonon/: __init__.py  _version.py  clean.sh  correction.py  flutils.py  forward.py  getDOS.py  getDOS_batch.py  getDOS_not_complete_dos.py  getdos.py  ms.py  multiphonon.py  paths.py  redutils.py  run1220.py  units.py  user.py  user.py.save  user_old.py
multiphonon/.svn/: entries
multiphonon/.svn/text-base/: README.svn-base  getDOS.py.svn-base  user.py.svn-base
multiphonon/backward/: __init__.py  _sqe2dos_script_templates.py  plotutils.py  singlephonon_sqe2dos.py  sqe2dos.py  stitch_dos.py
multiphonon/dev/.svn/: entries
multiphonon/dev/.svn/text-base/: user.py.lappy.svn-base
multiphonon/dev/cgi_from_mcq/.svn/: entries
multiphonon/doc/.svn/: entries
multiphonon/dos/: __init__.py  io.py  nice.py
multiphonon/fonts/.svn/: entries
multiphonon/fonts/ttf-thryomanes/.svn/: entries
multiphonon/forward/: __init__.py  phonon.py
multiphonon/sqe/: __init__.py
multiphonon/src/: #multiphonon.py#  constants.py  correction.py  correction_not_complete_dos.py  densityOfStates.py  expSqe.py  get_q_e_sqe_sqerr.py  io_tools.py  multiphonon.py  multiphonon_not_complete_dos.py  sqe2dos.py  sqe2dos_not_complete_dos.py  sqePlot.py  sqePlot_gnuplot.py  sqePlot_pylab.py
multiphonon/src/.svn/text-base/: expSqe.py.svn-base  io.py.svn-base  multiphonon.py.svn-base  sqe2dos.py.svn-base  sqePlot.py.svn-base
multiphonon/ui/: __init__.py  batch.py  getdos.py  getdos0.py
multiphonon/units/: __init__.py  neutron.py  phonon.py
paper/: paper.bib  paper.md  paper.tex
src/: correction.py  densityOfStates.py  doubleDos.py  expSqe.py  get_q_e_sqe_sqerr.bak  mfit.py  multiphonon.py  sqe2dos.py  sqePlot.py  sqePlot_gnuplot.bak  sqePlot_pylab.py
src/.svn/: entries
src/.svn/text-base/: correction.py.svn-base  densityOfStates.py.svn-base  doubleDos.py.svn-base
src/multiphonon/: Make.mm  __init__.py  _version.py  correction.py  densityOfStates.py  expSqe.py  flutils.py  getDOS.py  getDOS2.py  getdos.py  ms.py  redutils.py  sqe2dos.py  sqePlot_gnuplot.py
src/multiphonon/backward/: _sqe2dos_script_templates.py  singlephonon_sqe2dos.py
src/multiphonon/batch/: Make.mm  __init__.py
src/multiphonon/forward/: __init__.py
src/multiphonon/multiphonon/: _version.py
src/multiphonon/sqe/: __init__.py
src/multiphonon/ui/: batch.py  getdos.py  getdos_deprecated.py
src/multiphonon/units/: phonon.py
test_cases/ChenZrO2Jun23/: getDOS.py  sqe.pkl  user.py
test_cases/ChenZrO2Mar10/: getDOS.py  sqe.pkl  user.py
test_cases/kc241x1x4/: dos2sqe.py
test_cases/pb/: user.py
test_cases/pb/test/: allCalcs.pkl
tests/: dos.py  flutils_TestCase.py  forward_TestCase.py  forward_TestCase2.py  forward_TestCase3.py  getdos_TestCase.py  getdos_TestCase2.py  ms_TestCase.py  pytest.ini  redutils_TestCase.py
tests/backward/: V-S1.h5  dos.py  plotutils_TestCase.py  singlephonon_sqe2dos_TestCase.py  singlephonon_sqe2dos_TestCase2.py  sqe2dos_TestCase.py  sqe2dos_TestCase2.py
tests/backward/expected_results/: sqe2dos-test2a-final-dos.h5  sqe2dos-test2b-final-dos.h5  sqe2dos-test2c-final-dos.h5  test1b-dos.h5  test1c1-dos.h5  test1c2-dos.h5
tests/batch/: pkg_TestCase.py  test2.csv
tests/csv/: example1  test.py
tests/data/: DJX-dos-Ei_80.h5  DJX-iqe-Ei_20.h5  DJX-mtiqe-Ei_20.h5  V-iqe-dE_0.2.h5  V-iqe.h5  XYZ2-initdos-Ei_80.h5  XYZ2-iqe-Ei_20.h5  dataurls.py  dos.py  graphite-Ei_130-dos.h5  graphite-Ei_130-iqe.h5  graphite-Ei_30-iqe.h5  graphite-Ei_300-dos.h5
tests/data/work-V/: I_E-exp-posE.h5  final-dos.h5  plot_dos_iteration.py  plot_residual.py  residual_E-posE.h5
tests/data/work-V/dirdydos/: corrected-sqe.h5  ddos.h5  se.h5
tests/data/work-V/round-0/: corrected_sqe.h5  dos.h5  exp-sqe.h5  mp-sqe.h5  ms-sqe.h5  plot_sqe.py  (+4 more)
tests/dos/: dos_interp_TestCase.py  dos_to_interp.h5  interp_TestCase.py  nice_TestCase.py
tests/dos/expected/: dos_interped.h5
tests/expected_results/: getdos-test1-final-dos.h5  getdos-test2-final-dos.h5  getdos-test3-final-dos.h5
tests/forward/: dos2sqe_TestCase.py  phonon_TestCase.py  phonon_TestCase2.py  phonon_TestCase3.py
tests/forward/expected_results/: S.h5  S1.h5  S2.h5  S3.h5  S4.h5  S5.h5  phonon.test1.An_set.npy  phonon.test1.E.npy
tests/getDOS/: TestCase1.py  parameters.py
tests/getDOS_batch/: TestCase1.py  parametersets.py  params-test4.csv  sqe1.pkl
tests/notebooks/: getdos-multiple-Ei.ipynb  getdos.ipynb  getdos2.ipynb
tests/sqe/: dynamical_range_TestCase.py  interp_TestCase.py  plot_TestCase.py
tests/ui/: V-params.yaml  batch_TestCase.py  getdos0_TestCase.py  getdos_TestCase.py
tests/ui/expected_results/: batch-1-final-dos.h5
uti/: h5topkl.py
(+50 files in other folders)
